Corrections du module collection